--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -398,7 +398,7 @@ Borrowed from {{bor|tl|es|libre}}. Displaced older {{m|tl|gratis}}, also borrowe
 * {{tl-IPA|li.bré}}
 
 ===Adjective===
-{{tl-adj||head2=libré}}
+{{tl-adj||head2=libré|b={{tl-bay sc}}}}
 
 # [[free]]; without [[charge]]; [[gratis]]
 #: {{syn|tl|walang-bayad|gratis|bigay}}
@@ -409,7 +409,18 @@ Borrowed from {{bor|tl|es|libre}}. Displaced older {{m|tl|gratis}}, also borrowe
 # [[vacant]]; not [[working]]
 
 ====Derived terms====
-{{der3|tl|ilibre|makalibre|magpalibre|palibrihin|paglilibre|manlibre|libre-kambiyo|librekasa|librekomida|libre-pensador}}
+{{der3|tl|ilibre|makalibre|magpalibre|palibrihin|paglilibre|manlibre}}
+
+====Related terms====
+{{rel3|tl|librekomida|librekasa|libre-kambiyo|libre-pensador}}
 
 ====See also====
 * {{l|tl|malaya}}
+
+===Noun===
+{{tl-noun||libré|b={{tl-bay sc}}}}
+
+# {{lb|tl|colloquial}} [[treat]]
+
+===Further reading===
+* {{R:Pambansang Diksiyonaryo}}
