--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -16,10 +16,10 @@
 # {{lb|en|uncountable|fandom slang}} [[fan fiction|Fan fiction]] based on [[celebrity|celebrities]] or [[fictional]] [[characters]] involved in an [[opposite]]-[[sex]] [[romantic]] and/or [[sexual]] [[relationship]].
 #* {{quote-book|en|year=2005|author=Rhiannon Bury|title=Cyberspaces of Their Own: Female Fandoms Online|pageurl=http://books.google.com/books?id=wmo_-QhfqeoC&pg=PA207&dq=%22het%22|page=207|publisher=Peter Lang|year_published=2005|isbn=0820471186
 |passage=Mary Ellen Curtin presented a paper at the 2002 Popular Culture Association conference in which she studied fanfiction archives to discover that black characters appeared far less in both '''het''' and slash fiction than white or even Latino/a characters.}}
-#* '''2006''', Catherine Driscoll, "One True Pairing: The Romance of Pornography and the Pornography of Romance", in ''Fan Fiction and Fan Communities in the Age of the Internet: New Essays'' (eds. Karen Hellekson & Kristina Busse), McFarland & Company (2006), {{ISBN|9780786426409}}, [http://books.google.com/books?id=UgZsi_DOKoQC&pg=PA84&dq=%22vast+majority+of+fan+fiction+is+het%22 page 84]:
-#*: The vast majority of fan fiction is '''het''' or slash, and these types are usually defined against each other as approaches to romance and porn, marginalizing gen as something outside of the dominant concerns of fan fiction.
-#* '''2010''', Rebecca Ward Black, "Just Don't Call Them Cartoons: The New Literacy Spaces of Anime, Manga, and Fanfiction", in ''Handbook of Research on New Literacies'' (eds. Julie Coiro, Michele Knobel, Colin Lankshear, & Donald J. Leu), Lawrence Erlbaum Associates (2010), {{ISBN|9780805856514}}, [http://books.google.com/books?id=ViE_ZSeu75kC&pg=PT613&dq=%22het%22+fanfiction page 595]:
-#*: Other studies explore why some women write '''''het''''', or fictions with heterosexual pairings of certain couples, within canons such as ''Star Trek Voyager'' that generally inspire slash fiction (Somogyi, 2002).
+#* {{quote-book|en|year=2006|editor=Karen Hellekson; Kristina Busse|author=Catherine Driscoll|chapter=One True Pairing: The Romance of Pornography and the Pornography of Romance|title=Fan Fiction and Fan Communities in the Age of the Internet: New Essays|pageurl=http://books.google.com/books?id=UgZsi_DOKoQC&pg=PA84&dq=%22vast+majority+of+fan+fiction+is+het%22|page=84|publisher=McFarland & Company|isbn=9780786426409
+|passage=The vast majority of fan fiction is '''het''' or slash, and these types are usually defined against each other as approaches to romance and porn, marginalizing gen as something outside of the dominant concerns of fan fiction.}}
+#* {{quote-book|en|year=2010|editor=Julie Coiro; Michele Knobel; Colin Lankshear; Donald J. Leu|author=Rebecca Ward Black|chapter=Just Don't Call Them Cartoons: The New Literacy Spaces of Anime, Manga, and Fanfiction|title=Handbook of Research on New Literacies|pageurl=http://books.google.com/books?id=ViE_ZSeu75kC&pg=PT613&dq=%22het%22+fanfiction|page=595|publisher=Lawrence Erlbaum Associates|isbn=9780805856514
+|passage=Other studies explore why some women write '''''het''''', or fictions with heterosexual pairings of certain couples, within canons such as ''Star Trek Voyager'' that generally inspire slash fiction (Somogyi, 2002).}}
 #* {{seemoreCites|en}}
 
 =====Synonyms=====
