t+ary:[[فرانسا]] ([[WT:EDIT|Assisted]]) <France#70442445>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -98,6 +98,7 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 * Antillean Creole: {{t|gcf|Frans|f}}
 *: Martinican Creole: {{t|gcf|Fwans|f}}
 * Arabic: {{t+|ar|فَرَنْسَا|f}}, {{t|ar|فَرَنْسَة|f}}, {{t|ar|الْإِفْرَنْج|f}} {{qualifier|archaic}}, {{t|ar|الْفِرِنْجَة|f}} {{qualifier|archaic}}
+*: Moroccan Arabic: {{t|ary|فرانسا|f}}
 * Aragonese: {{t|an|Franzia|f}}
 * Armenian: {{t+|hy|Ֆրանսիա}}
 * Aromanian: {{t|rup|Frãntsii|f}} {{qualifier|indefinite}}, {{t|rup|Frãntsia}} {{qualifier|definite}}, {{t|rup|Gallia|f}}
