--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -398,10 +398,11 @@ From late {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|
 ===Verb===
 {{en-verb}}
 
-# {{lb|en|transitive}} To [[build]] with bricks.
+# {{lb|en|transitive}} To [[build]], [[line]], or form with bricks.
 #* {{quote-book|en|year=1904|author=Thomas Hansom Cockin|title=An Elementary Class-Book of Practical Coal-Mining|publisher=C. Lockwood and Son|page=78|passage=If the ground is strong right up to the surface, a few yards are usually sunk and '''bricked''' before the engines and pit top are erected<!-- ;-->}}
 #* '''1914''', ''The Mining Engineer'', Institution of Mining Engineers, page 349
 #*: The shaft was next '''bricked''' between the decks until the top scaffold was supported by the brickwork and [made] to share the weight with the prids.
+#* {{quote-book|1=en|year=2010|author=Peter Corris|authorlink=Peter Corris|title=Torn Apart|publisher=Allen and Unwin|page=18|text=He came in and we went out to the back area I'd '''bricked''' amateurishly years ago.}}
 # {{lb|en|transitive}} To make into bricks.
 #* '''1904''' September 15, James C. Bennett, Walter Renton Ingalls (editor), ''Lead Smelting and Refining with Some Notes on Lead Mining'' (1906), The Engineering and Mining Journal, page 66
 #*: The plant, which is here described, for '''bricking''' fine ores and flue dust, was designed and the plans produced in the engineering department of the Selby smelter.
