--- a/en/愗/愗.15659.wikitext
+++ b/en/愗/愗.15659.wikitext
@@ -17,18 +17,18 @@
 
 ===Pronunciation===
 {{zh-pron
-|m=mào
+|m=mào,mòu
 |c=mau6
 |mc=y
 |oc=y
 |ma=
-|cat=
+|cat=a
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{zh-used|怐愗}}
 
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
