--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -234,7 +234,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Polish: {{t+|pl|pchać}}, {{t+|pl|popychać}}
 * Portuguese: {{t+|pt|pressionar}}
 * Russian: {{t+|ru|подта́лкивать|impf}}, {{t+|ru|подгоня́ть|impf}}, {{t+|ru|прота́лкивать|impf}}
-* Swedish: {{t+|sv|hetsa}}
+* Swedish: {{t+|sv|pressa}}
 * Telugu: {{t|te|నిరంతర వత్తిడి|sc=Telu}}
 {{trans-bottom}}
 
@@ -257,6 +257,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Portuguese: {{t+|pt|forçar}}
 * Russian: {{t+|ru|продвига́ть|impf}}; {{t+|ru|прота́лкивать|impf}} {{q|point of view}}
 * Telugu: {{t|te|ఆగగని ప్రతిపాదన|sc=Telu}} {{q|point of view}}, {{t+|te|ప్రతిపాదించు|sc=Telu}} {{q|product}}
+* Swedish: {{t+|sv|propsa}}
 * Venetian: {{t|vec|far reclam}} {{q|product}}
 {{trans-bottom}}
 
