t+ur:[[پجامہ]] ([[WT:EDIT|Assisted]]) <pajamas#70557037>

--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -107,7 +107,7 @@ From {{der|en|ur|پاجامہ|tr=pājāma}}/{{der|en|hi|पैजामा}}, fr
 * Turkish: {{t+|tr|pijama}}
 * Turkmen: {{t|tk|pijama}}
 * Ukrainian: {{t|uk|піжа́ма|f|sc=Cyrl}}
-* Urdu: {{t|ur|پاجامہ|tr=pājāma|sc=ur-Arab}}, {{t|ur|پایجامہ|tr=pāyjāma|sc=ur-Arab}}
+* Urdu: {{t|ur|پاجامہ|tr=pājāma|sc=ur-Arab}}, {{t|ur|پایجامہ|tr=pāyjāma|sc=ur-Arab}}, {{t|ur|پجامہ|tr=pajāma}}
 * Uzbek: {{t+|uz|pijama}}
 * Vietnamese: {{t|vi|đồ ngủ}}, {{t+|vi|pijama}}
 * Welsh: {{t|cy|pyjamas|m}}, {{t|cy|pajamas}}, {{t|cy|siwt nos|f}}
