--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -22,7 +22,7 @@
 {{Han compound|相|心|t2=heart, mind|ls=psc|c1=p|c2=s}} – to think, to consider.
 
 ===Etymology===
-From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to think”).
+From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to think”). Compare with {{cog|my|စဉ်းစား||to think}}.
 
 ===Pronunciation===
 {{zh-pron
