/* Korean */ Added eumhun reading and definitions <惱#70568950>

--- a/en/惱/惱.15622.wikitext
+++ b/en/惱/惱.15622.wikitext
@@ -69,9 +69,9 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=뇌|eumhun=|rv=noe|mr=noe|y=noy}}
+{{ko-hanja|괴로워하다|괴로워할|뇌}}
 
-# {{rfdef|ko|sort=心09}}
+# {{hanja form of|뇌|[[angered]], [[filled]] [[with]] [[hate]]}}
 
 ----
 
