--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -234,7 +234,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Polish: {{t+|pl|pchać}}, {{t+|pl|popychać}}
 * Portuguese: {{t+|pt|pressionar}}
 * Russian: {{t+|ru|подта́лкивать|impf}}, {{t+|ru|подгоня́ть|impf}}, {{t+|ru|прота́лкивать|impf}}
-* Swedish: {{t+|sv|pressa}}
+* Swedish: {{t+|sv|pressa}}, {{t+|sv|pracka på}}
 * Telugu: {{t|te|నిరంతర వత్తిడి|sc=Telu}}
 {{trans-bottom}}
 
