/* Chinese */Add senses and alt forms <愆#70578956>

--- a/en/愆/愆.15642.wikitext
+++ b/en/愆/愆.15642.wikitext
@@ -10,7 +10,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=諐,䇂,㥶,𠍴,𠐨,𢝐,𢡊,𧗭,𧗺,𠏘,𠎱,𫺛}}
 
 ===Glyph origin===
 {{Han etym}}
@@ -22,13 +22,15 @@
 |mc=y
 |oc=y
 |ma=
-|cat=n
+|cat=n,v
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# [[fault]], [[mistake]], [[error]], [[transgression]]
+# {{lb|zh|literary}}  [[fault]]; [[mistake]]; [[error]]; [[transgression]]
+# {{lb|zh|literary}} to [[exceed]]; to [[surpass]]; to [[pass]] (time); to [[delay]]
+# {{lb|zh|obsolete}} to [[suffer]] an [[intractable]] [[illness]]
 
 ====Compounds====
 {{zh-der|乾餱以愆|愆陽|三風十愆|愆面|愆義|愆程|愆痾|愆德|愆尤|愆家|惹罪招愆|愆滯|愆期|不愆|愆序|愆伏|愆忒|惹禍招愆|前愆|蓋愆|繩愆糾謬|罪愆}}
