--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -248,7 +248,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Telugu: {{t+|te|వాంతి}}
 * Turkish: {{t+|tr|kusmuk}}, {{t+|tr|kusuntu}}
 * Ukrainian: {{t+|uk|блюво́та|f}}, {{t+|uk|блювоти́ння|n}}
-* Urdu: {{t|ur|الٹی}}
+* Urdu: {{t|ur|اُلْٹی|f|tr=ulṭī}}
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
 * Volapük: {{t+|vo|vomitot}}
 * Yakan: {{t|yka|uta'}}
